--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -38,8 +38,14 @@
     .chess-board { border-spacing: 0; border-collapse: collapse; }
     .chess-board th { padding: .5em; }
     .chess-board td { border: 1px solid; width: 2em; height: 2em; }
-    .chess-board .light { background: #9e7c7c; }
-    .chess-board .dark { background: #493939; }
+    .chess-board .light { background: #f6eaea; }
+    .chess-board .dark { background: #897a7a; }
+    td{
+      text-align: center;
+      font-size: xx-large;
+      font-weight: bold;
+      text-shadow: aliceblue 0 0 4px;
+    }
   </style>
 </head>
 <body>
